Fix #about section getting cut off by sticky header by using default section padding

--- a/style.css
+++ b/style.css
@@ -97,8 +97,6 @@ main > section {
 
 #about {
     background-color: var(--color-bg-alt);
-    padding-top: var(--space-xl);
-    padding-bottom: var(--space-xl);
 }
 
 #projects, #achievements, #contact {
